Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3828

HEAD requests hang when origin returns Transfer-Encoding: Chunked

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • Core
    • None

    Description

      When a client makes a HEAD request and the origin returns a header containing Transfer-Encoding: chunked ATS for some reason adds a ChunkedConsumer to dechunk the body (which will never arrive) in some cases ATS will not return the headers to the client resulting in a 502, or in other cases it will send the headers and then close the connection later thinking the origin timed out. In both cases the behavior is incorrect.

      Attachments

        Activity

          People

            briang Brian Geffon
            briang Brian Geffon
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: