TS-3828: HEAD requests hang when origin returns Transfer-Encoding: Chunked